raw/AGNESIA TATONTOS FEVOURA 6427 245150207111058/2024-11-14-08-27-49.ceg/compilation.txt
NT.java:22: error: <identifier> expected
static void double output(Double tambah, Double kurang, Double kali, Double bagi, Double output){
           ^
NT.java:22: error: '(' expected
static void double output(Double tambah, Double kurang, Double kali, Double bagi, Double output){
            ^
2 errors
Not compiled
